    - encode bug summary lines to avoid crashed when using urwid UI due to
      unparsable UTF8 characters; thanks to Stefan Seide for the report;
      Closes: #552045
  * bin/reportbug, reportbug/utils.py
    - restore the functionality that includes changed conffile into the bug
      report, that went broken log ago; thanks to Håkon Stordahl for the report
      and patch; Closes: #503131

 -- Sandro Tosi <morph@debian.org>  Sat, 03 Apr 2010 19:00:08 +0200

reportbug (4.11) unstable; urgency=low

  [ Luca Bruno ]
  * reportbug/ui/gtk2_ui.py:
    - rename Forward button to Continue button; thanks to Matijs van Zuijlen for
      the report; Closes: #565140
    - more selectable labels and use text views for bug replies;
      thanks to Éric Araujo for the report; Closes: #564447
    - wrap text to be 79 chars width in the editor; thanks to Mark Brown for
      the report; Closes: #562878
    - fix focus stealing issues; thanks to Eduard Bloch for the report;
      Closes: #564418

  [ Sandro Tosi ]
  * share/presubj
    - specified the pager exit key doesn't apply to GTK+ UI; thanks to Éric
      Araujo for the report; Closes: 568196
    - clarified to not repot bugs against reportbug in case of GTK+ crashes
  * bin/reportbug, reportbug/utils.py
    - identify the pseudo-headers passed on the command-line and don't merge
      them in the mail headers, but add them to the bug "standard"
      pseudo-headers; thanks to Piotr Engelking for the report; Closes: #552167
    - add a very simple check for email validity, to rule out basic cases;
      thanks to Cyril Bouthors for the report and to Carl Chenet for the patch;
      Closes: #221548
  * doc/README.Users
    - document how to add a pseudo-header
  * reportbug/utils.py
    - recognize also files in /var/lib/dpkg/info/, identifying the package they
      belong to; thanks to Dan Jacobson for the report; Closes: #230582
    - added 'Forwarded' to the list of supported pseudo-header