@@ -729,7 +729,7 @@ def generate_blank_report(package, pkgversion, severity, justification,
                           depinfo, confinfo, foundfile='', incfiles='',
                           system='debian', exinfo=0, type=None, klass='',
                           subject='', tags='', body='', mode=MODE_EXPERT,
-                          pseudos=None, debsumsoutput=None):
+                          pseudos=None, debsumsoutput=None, issource=False):
     # For now...
     import bugreport
 
@@ -741,7 +741,7 @@ def generate_blank_report(package, pkgversion, severity, justification,
                               pseudoheaders=pseudos, exinfo=exinfo, type=type,
                               system=system, depinfo=depinfo, sysinfo=sysinfo,
                               confinfo=confinfo, incfiles=incfiles,
-                              debsumsoutput=debsumsoutput)
+                              debsumsoutput=debsumsoutput, issource=issource)
     return unicode(rep)
 
 def get_cpu_cores():
